--- a/temp.html
+++ b/temp.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title></title>
+	<meta charset="UTF-8">
+	<title>Страничка</title>
 </head>
 <body>
-<h1>My wolf</h1>
-<img src="imeg/wolf.png" width="37" height="50">
-<h2>My Robot</h2>
+	<h1 align="center" title="тест" title="errrrror">Пример заголовка первого уровня нашей страницы</h1>
+	<h2 align="center" title="тестттт">Заголовок первого уровня</h2>
+	
+<p>What is Lorem Ipsum?</p>
+
+<strong><em>Lorem Ipsum</em> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. <br />It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</strong></p>
+
+<p>What is Lorem Ipsum?</p>
+
+<em>Lorem Ipsum</em> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. <br />It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+
 </body>
 </html>
