--- a/temp.html
+++ b/temp.html
@@ -1,20 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel="stylesheet" type="text/css" href="tempp.css">
 	<meta charset="UTF-8">
 	<title>Страничка</title>
 </head>
 <body>
+
 	<h1 align="center" title="тест" title="errrrror">Пример заголовка первого уровня нашей страницы</h1>
 	<h2 align="center" title="тестттт">Заголовок первого уровня</h2>
 	
-<p>What is Lorem Ipsum?</p>
+<p id="viktor">What is Lorem Ipsum?</p>
+<img src="images/inbox.png" alt="inbox" width="128" height="128" align="right">
+<strong><em>Lorem Ipsum</em> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. <br />It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</strong>
+<a href="temp2.html">second page</a>
+<a href="#rerere">перейти</a> 
+<a href="mailto:wolfrider2001cbr@gmail.com">написать письмо</a>
+</p>
 
-<strong><em>Lorem Ipsum</em> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. <br />It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</strong></p>
+<p class="viktor">What is Lorem Ipsum?</p>
+<img src="images/mail.png" alt="mail" align="right">
+<em>Lorem Ipsum</em> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. <br />It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+<a href="http://maxsite.org/page/how-to-put-your-project-on-github-com" target="_blank">My blog</a></p>
+<img id="rerere" src="https://zhacker.net/uploads/posts/2014-01/1389583503_zagubor-poty.jpg" alt="mail" width="128" height="128" align="center">
+<ol type="I">
+	<li>The standard Lorem Ipsum passage, used since the 1500s</li>
+	<img src="../Template/images/5stars.png" align="right">
+	<li>Section 1.10.32 of "de Finibus Bonorum et Malorum", written by Cicero in 45 BC</li>
+	<img src="../Template/images/5stars.png" align="right">
+	<li>1914 translation by H. Rackham</li>
+	<img src="../Template/images/5stars.png" align="right">
+</ol>
+<ul type="disc"><li>The standard Lorem Ipsum passage, used since the 1500s</li>
+	<img src="../Template/images/5stars.png" align="right">
+	<li type="circle">Section 1.10.32 of "de Finibus Bonorum et Malorum", written by Cicero in 45 BC</li>
+	<img src="../Template/images/5stars.png" align="right">
+	<li type="square">1914 translation by H. Rackham</li>
+	<img src="../Template/images/5stars.png" align="right"></ul>
+<ol>
 
-<p>What is Lorem Ipsum?</p>
+<li>Розділ 1.10.33 "de Finibus Bonorum et Malorum", написаного Цицероном у 45 році до н.е.
+<ul>
+	<li>Розділ 1.10.33 "de Finibus Bonorum et Malorum", написаного Цицероном у 45 році до н.е.</li>
+	<li>Розділ 1.10.33 "de Finibus Bonorum et Malorum", написаного Цицероном у 45 році до н.е.</li>
+	<li>Розділ 1.10.33 "de Finibus Bonorum et Malorum", написаного Цицероном у 45 році до н.е.</li>
+</ol>
 
-<em>Lorem Ipsum</em> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. <br />It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+<ol>
+	<li>The standard Lorem Ipsum passage, used since the 1500s</li>
 
+	<ul>
+		<li>fertjdhs fdsfdy fdy fgy df sy s
+<ul> 
+<li>werwe rwer we</li>
+<li>wer werw e</li>
+<li>fdg dfger ger </li>
+
+</ul>
+
+
+		</li>
+		<li>fertjdhs fdsfdy fdy fgy df sy s</li>
+		<li>fertjdhs fdsfdy fdy fgy df sy s</li>
+
+	</ul>
+</ol>
+<a href="#"><img src="images/download.png" alt="free"></a>
+<p><a href="cupon.pdf"><em>download cupon<em/></a></p>
 </body>
 </html>
