--- a/temp.html
+++ b/temp.html
@@ -21,8 +21,13 @@
 <p class="viktor">What is Lorem Ipsum?</p>
 <img src="images/mail.png" alt="mail" align="right">
 <em>Lorem Ipsum</em> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. <br />It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-<a href="http://maxsite.org/page/how-to-put-your-project-on-github-com" target="_blank">My blog</a></p>
-<img id="rerere" src="https://zhacker.net/uploads/posts/2014-01/1389583503_zagubor-poty.jpg" alt="mail" width="128" height="128" align="center">
+	<a href="http://maxsite.org/page/how-to-put-your-project-on-github-com" target="_blank">My blog</a></p>
+	
+	<img id="rerere" src="https://zhacker.net/uploads/posts/2014-01/1389583503_zagubor-poty.jpg" alt="mail" width="128" height="128" align="center">
+
+
+
+
 <ol type="I">
 	<li>The standard Lorem Ipsum passage, used since the 1500s</li>
 	<img src="../Template/images/5stars.png" align="right">
@@ -31,20 +36,34 @@
 	<li>1914 translation by H. Rackham</li>
 	<img src="../Template/images/5stars.png" align="right">
 </ol>
+
+
+
+
+
 <ul type="disc"><li>The standard Lorem Ipsum passage, used since the 1500s</li>
 	<img src="../Template/images/5stars.png" align="right">
 	<li type="circle">Section 1.10.32 of "de Finibus Bonorum et Malorum", written by Cicero in 45 BC</li>
 	<img src="../Template/images/5stars.png" align="right">
 	<li type="square">1914 translation by H. Rackham</li>
 	<img src="../Template/images/5stars.png" align="right"></ul>
-<ol>
 
+
+
+
+
+
+<ol>
 <li>Розділ 1.10.33 "de Finibus Bonorum et Malorum", написаного Цицероном у 45 році до н.е.
 <ul>
 	<li>Розділ 1.10.33 "de Finibus Bonorum et Malorum", написаного Цицероном у 45 році до н.е.</li>
 	<li>Розділ 1.10.33 "de Finibus Bonorum et Malorum", написаного Цицероном у 45 році до н.е.</li>
 	<li>Розділ 1.10.33 "de Finibus Bonorum et Malorum", написаного Цицероном у 45 році до н.е.</li>
 </ol>
+
+
+
+
 
 <ol>
 	<li>The standard Lorem Ipsum passage, used since the 1500s</li>
@@ -65,7 +84,60 @@
 
 	</ul>
 </ol>
-<a href="#"><img src="images/download.png" alt="free"></a>
+
+	<a href="#"><img src="images/download.png" alt="free"></a>
 <p><a href="cupon.pdf"><em>download cupon<em/></a></p>
+
+
+
+<title> Table</title>
+<table class="viktorr"> 
+<tr >
+	<th align="left" >Видерите комплект</th>
+	<th>Стандарт</th>
+	<th>Голд</th>
+	<th>Премиум</th>
+</tr>	
+<tr align="center">
+	<td align="left">Основной видеокурс</td>
+	<td><img src="images/addgreen.png" alt="yes"/></td>
+	<td><img src="images/addgreen.png" alt="yes"/></td>
+	<td><img src="images/addgreen.png" alt="yes"/></td>
+
+</tr>
+
+<tr align="center">
+	<td align="left">Продвинутый видеокурс</td>
+	<td><img src="images/quit.png" alt="no"/></td>
+	<td><img src="images/addgreen.png" alt="yes"/></td>
+	<td><img src="images/addgreen.png" alt="yes"/></td>
+
+</tr>
+
+<tr align="center">
+	<td align="left">щсновной видеокурс</td>
+	<td><img src="images/quit.png" alt="no"/></td>
+	<td><img src="images/quit.png" alt="no"/></td>
+	<td><img src="images/addgreen.png" alt="yes"/></td>
+
+</tr>
+
+<tr align="center">
+	<td rowspan="2"></td>
+	<td><strong>1500</strong></strong></td>
+	<td><strong>2000</strong></strong></td>
+	<td><strong>2500</strong></strong></td>
+
+</tr>
+
+<tr align="center">
+	<td ><a href="#">заказать</a></td>
+	<td><a href="#">заказать</a></td>
+	<td><a href="#">заказать</a></td>
+</tr>
+</table>
+
+
+
 </body>
 </html>
